src/objects/Apttus_QPConfig__ProposalIncentiveBenefitData__c.object
<CustomObject>
    <description>Represents a single benefit data row associated with the incentive benefit for the quote/proposal</description>
    <fields>
        <fullName>Apttus_QPConfig__BeneficiaryId__c</fullName>
        <description>ID of the beneficiary associated with the benefit</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>ID of the beneficiary associated with the benefit</inlineHelpText>
        <label>Beneficiary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__BeneficiaryType__c</fullName>
        <description>The beneficiary type</description>
        <inlineHelpText>The beneficiary type</inlineHelpText>
        <label>Beneficiary Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__BenefitProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the benefit product associated with the benefit</description>
        <inlineHelpText>ID of the criteria product associated with the benefit</inlineHelpText>
        <label>Benefit Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Proposal Incentive Benefit Data (Benefit Product)</relationshipLabel>
        <relationshipName>QuoteIncentiveBenefitDataBenefitProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__CriteriaProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the criteria product associated with the benefit</description>
        <inlineHelpText>ID of the criteria product associated with the benefit</inlineHelpText>
        <label>Criteria Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Proposal Incentive Benefit Data (Criteria Product)</relationshipLabel>
        <relationshipName>QuoteIncentiveBenefitDataCriteriaProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__GroupByValues__c</fullName>
        <description>The group by field values</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>The group by field values</inlineHelpText>
        <label>Group By Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__IncentiveId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated incentive</description>
        <inlineHelpText>ID of the associated incentive</inlineHelpText>
        <label>Incentive</label>
        <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
        <relationshipLabel>Proposal Incentive Benefit Data</relationshipLabel>
        <relationshipName>ProposalIncentiveBenefitData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__PeriodEndDate__c</fullName>
        <description>The rollup period end date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The rollup period end date</inlineHelpText>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__PeriodStartDate__c</fullName>
        <description>The rollup period start date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The rollup period start date</inlineHelpText>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ProposalId__c</fullName>
        <description>ID of the associated quote/proposal</description>
        <inlineHelpText>ID of the associated quote/proposal</inlineHelpText>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Proposal Incentive Benefit Data</relationshipLabel>
        <relationshipName>ProposalIncentiveBenefitData</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__RollupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated rollup</description>
        <inlineHelpText>ID of the associated rollup</inlineHelpText>
        <label>Rollup</label>
        <referenceTo>Apttus_Config2__SearchFilter__c</referenceTo>
        <relationshipLabel>Proposal Incentive Benefit Data</relationshipLabel>
        <relationshipName>ProposalIncentiveBenefitData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__SoldToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The ID of the sold to account</description>
        <inlineHelpText>The ID of the sold to account</inlineHelpText>
        <label>Sold To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Proposal Incentive Benefit Data</relationshipLabel>
        <relationshipName>ProposalIncentiveBenefitData</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__UsedBenefitAmount__c</fullName>
        <description>The benefit used on amount</description>
        <inlineHelpText>The benefit used on amount</inlineHelpText>
        <label>Used Benefit Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__UsedBenefitQuantity__c</fullName>
        <description>The benefit used on quantity</description>
        <inlineHelpText>The benefit used on quantity</inlineHelpText>
        <label>Used Benefit Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <label>Proposal Incentive Benefit Data</label>
    <nameField>
        <displayFormat>PBD-{00000000}</displayFormat>
        <label>Data Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Incentive Benefit Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>